--- a/content/panorama/src/hud/styles.less
+++ b/content/panorama/src/hud/styles.less
@@ -21,3 +21,15 @@
         opacity: 0.8;
     }
 }
+.container {
+    width: 100%;
+    height: 100%;
+}
+
+.test-block {
+    width:200px; 
+    height: 200px;
+    flow-children: down;
+    horizontal-align: center;
+    vertical-align: center;
+}
